# spotify-automation

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
contrib/make/: blueprint.json
controller/: Cargo.toml  README.md
controller/src/: errors.rs  lib.rs
docs/api/: bundle.js  index.html  insomnia.json
handlers/: Cargo.toml  README.md  vercel.json
handlers/api/auto/: dwa.rs  mostplayed.rs  timerange.rs
handlers/api/oauth/: callback.rs  login.rs
native/: Cargo.toml
native/src/: config.rs  errors.rs  main.rs
native/src/controllers/: auto.rs  mod.rs  oauth.rs
native/src/guards/: auth_token.rs  authorized_controller.rs  mod.rs
persistence/: Cargo.toml  README.md
persistence/src/: errors.rs  lib.rs  noop.rs  redis.rs
vercel-utils/: Cargo.toml  README.md
vercel-utils/src/: lib.rs  macros.rs  urls.rs
